--- a/app/src/main/res/layout/menu_vol.xml
+++ b/app/src/main/res/layout/menu_vol.xml
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <RelativeLayout
-                android:id="@+id/dashboard_layout"
+                android:id="@+id/dashboard_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -106,7 +106,7 @@
                 android:layout_height="1dp"
                 android:visibility="gone"/>
             <RelativeLayout
-                android:id="@+id/about_shamsaha"
+                android:id="@+id/my_profile_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -122,7 +122,7 @@
                     tools:ignore="UseAppTint" />
 
                 <TextView
-                    android:id="@+id/event_text"
+                    android:id="@+id/my_profile_vol"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -138,7 +138,7 @@
                     android:textStyle="bold" />
             </RelativeLayout>
             <RelativeLayout
-                android:id="@+id/get_involved"
+                android:id="@+id/my_shift_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -154,7 +154,7 @@
                     tools:ignore="UseAppTint" />
 
                 <TextView
-                    android:id="@+id/event_text2"
+                    android:id="@+id/my_shift_vol"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -176,7 +176,7 @@
                 android:visibility="gone"/>
 
             <RelativeLayout
-                android:id="@+id/resource"
+                android:id="@+id/vol_calander_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -210,15 +210,16 @@
 
 
                 <ImageView
+                    android:visibility="gone"
                     android:id="@+id/navigation_next_image"
                     android:layout_width="24dp"
                     android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/ic_baseline_navigate_next_24"
                     android:tint="@color/white"
-                    android:layout_alignParentRight="true"
                     tools:ignore="UseAppTint" />
 
             </RelativeLayout>
@@ -229,83 +230,7 @@
                 android:layout_height="1dp"
                 android:visibility="gone"/>
 
-            <RelativeLayout
-                android:id="@+id/per_country"
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/donate_img"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/ic_launcher_background"
-
-                    android:visibility="gone"
-                    tools:ignore="UseAppTint" />
-
-                <TextView
-                    android:id="@+id/donate_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="45dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-
-                    android:layout_marginBottom="10dp"
-                    android:layout_toEndOf="@+id/donate_img"
-                    android:layout_toRightOf="@+id/donate_img"
-                    android:text="@string/per_country"
-                    android:textColor="@color/white"
-
-
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-
-            <View
-                android:id="@+id/das_view8"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:visibility="gone"/>
-
-            <RelativeLayout
-                android:id="@+id/survivor_support_tools"
-                android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/transection_img"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/ic_launcher_background"
-                    android:visibility="gone"
-                    tools:ignore="UseAppTint" />
-
-                <TextView
-                    android:id="@+id/transection_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="45dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-
-                    android:layout_toEndOf="@+id/transection_img"
-                    android:layout_toRightOf="@+id/transection_img"
-                    android:text="@string/survivor_support_tools"
-                    android:textColor="@color/white"
-
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
+          
 
             <View
                 android:id="@+id/das_view5"
@@ -313,7 +238,7 @@
                 android:layout_height="1dp"
                 android:visibility="gone"/>
             <RelativeLayout
-                android:id="@+id/events_media"
+                android:id="@+id/swift_swap_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -352,7 +277,7 @@
                 android:visibility="gone"/>
 
             <RelativeLayout
-                android:id="@+id/contact_us"
+                android:id="@+id/client_service_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -391,7 +316,7 @@
                 android:visibility="gone"/>
 
             <RelativeLayout
-                android:id="@+id/lock_app"
+                android:id="@+id/on_duity_backup_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -423,13 +348,83 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
-            <View
-                android:id="@+id/das_view"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:visibility="gone" />
             <RelativeLayout
-                android:id="@+id/chat_now"
+                android:id="@+id/language_backup_layout_vol"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+               >
+
+                <ImageView
+                    android:id="@+id/donate_img"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/ic_launcher_background"
+
+                    android:visibility="gone"
+                    tools:ignore="UseAppTint" />
+
+                <TextView
+                    android:id="@+id/donate_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="45dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+
+                    android:layout_marginBottom="10dp"
+                    android:layout_toEndOf="@+id/donate_img"
+                    android:layout_toRightOf="@+id/donate_img"
+                    android:text="@string/language_back_up"
+                    android:textColor="@color/white"
+
+
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+
+
+            <RelativeLayout
+                android:id="@+id/inperson_backup_layout_vol"
+                android:layout_width="match_parent"
+                android:visibility="gone"
+                
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/transection_img"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/ic_launcher_background"
+                    android:visibility="gone"
+                    tools:ignore="UseAppTint" />
+
+                <TextView
+                    android:id="@+id/transection_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="45dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+
+                    android:layout_toEndOf="@+id/transection_img"
+                    android:layout_toRightOf="@+id/transection_img"
+                    android:text="@string/in_person_back_up"
+                    android:textColor="@color/white"
+
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/provide_backup_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -444,20 +439,22 @@
                     android:visibility="gone"
                     tools:ignore="UseAppTint" />
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/contact_us_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="36dp"
-                    android:layout_marginStart="40dp"
+                <TextView
+                    android:id="@+id/dasdasd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="40dp"
 
                     android:layout_marginBottom="10dp"
                     android:layout_toEndOf="@+id/contact_us_img"
                     android:layout_toRightOf="@+id/contact_us_img"
-                    android:background="@drawable/button_custom_design"
-                    android:text="@string/chat_now" />
+                    android:text="@string/privide_back_up"
+                    android:textColor="@color/white"
+
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
 
 
@@ -468,7 +465,7 @@
                 android:layout_height="1dp"
                 android:visibility="gone"/>
             <RelativeLayout
-                android:id="@+id/volunteer_login"
+                android:id="@+id/case_report_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -495,14 +492,14 @@
                     android:layout_marginBottom="10dp"
                     android:layout_toEndOf="@+id/logout_img"
                     android:layout_toRightOf="@+id/logout_img"
-                    android:text="@string/volunteer_login"
+                    android:text="@string/case_report"
                     android:textColor="@color/white"
 
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
             <RelativeLayout
-                android:id="@+id/terms_conditions"
+                android:id="@+id/resourse_layout_vol"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -529,7 +526,112 @@
                     android:layout_marginBottom="10dp"
                     android:layout_toEndOf="@+id/logout_img2"
                     android:layout_toRightOf="@+id/logout_img2"
-                    android:text="@string/terms_condition"
+                    android:text="@string/vol_resource"
+                    android:textColor="@color/white"
+
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/event_media_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/logout_img23"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/ic_launcher_background"
+                    android:visibility="gone"
+                    tools:ignore="UseAppTint"/>
+
+                <TextView
+                    android:id="@+id/logout_text23"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+
+                    android:layout_marginBottom="10dp"
+                    android:layout_toEndOf="@+id/logout_img23"
+                    android:layout_toRightOf="@+id/logout_img23"
+                    android:text="@string/vol_event_media"
+                    android:textColor="@color/white"
+
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_marginTop="45dp"
+                android:id="@+id/logout_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/logout_img234"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/ic_launcher_background"
+                    android:visibility="gone"
+                    tools:ignore="UseAppTint"/>
+
+                <TextView
+                    android:id="@+id/logout_text234"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+
+                    android:layout_marginBottom="10dp"
+                    android:layout_toEndOf="@+id/logout_img234"
+                    android:layout_toRightOf="@+id/logout_img234"
+                    android:text="@string/logout"
+                    android:textColor="@color/white"
+
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_marginBottom="20dp"
+                android:id="@+id/setting_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/logout_img2345"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/ic_launcher_background"
+                    android:visibility="gone"
+                    tools:ignore="UseAppTint"/>
+
+                <TextView
+                    android:id="@+id/logout_text2345"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+
+                    android:layout_marginBottom="10dp"
+                    android:layout_toEndOf="@+id/logout_img2345"
+                    android:layout_toRightOf="@+id/logout_img2345"
+                    android:text="@string/setting"
                     android:textColor="@color/white"
 
                     android:textSize="16sp"
