--- a/app/src/main/res/layout/fragment_resources_details.xml
+++ b/app/src/main/res/layout/fragment_resources_details.xml
@@ -72,6 +72,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/sos"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
