--- a/app/src/main/res/layout/popup_shift_registration.xml
+++ b/app/src/main/res/layout/popup_shift_registration.xml
@@ -25,6 +25,7 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/cancel_image_view"
         app:layout_constraintTop_toTopOf="@+id/jflkasj"
         android:layout_marginEnd="5dp"
         android:src="@drawable/ic_launcher_background"
@@ -32,8 +33,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
 
-        app:layout_constraintWidth_percent="0.1"
-        app:layout_constraintHeight_percent="0.05"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintHeight_percent="0.1"
 
 
         ></de.hdodenhof.circleimageview.CircleImageView>
@@ -54,9 +55,10 @@
         app:layout_constraintHorizontal_bias="0.042"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.122"></androidx.appcompat.widget.AppCompatTextView>
+        app:layout_constraintVertical_bias="0.291"></androidx.appcompat.widget.AppCompatTextView>
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/shift"
         app:layout_constraintTop_toBottomOf="@+id/djsalkjldfka"
         app:layout_constraintStart_toStartOf="@+id/djsalkjldfka"
         android:text="27 March 2023, 6 PM - 6 AM (
@@ -83,9 +85,10 @@ evening Shift)"
         app:layout_constraintHorizontal_bias="0.042"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.23"></androidx.appcompat.widget.AppCompatTextView>
+        app:layout_constraintVertical_bias="0.634"></androidx.appcompat.widget.AppCompatTextView>
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/job"
         app:layout_constraintTop_toBottomOf="@+id/jhsdfadhsfha"
         app:layout_constraintStart_toStartOf="@+id/jhsdfadhsfha"
         android:text="English Advocacy)"
@@ -94,4 +97,29 @@ evening Shift)"
 
 
         ></androidx.appcompat.widget.AppCompatTextView>
+
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/accept_button"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/custom_button"
+        android:text="@string/accept"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.532"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/job">
+
+    </androidx.appcompat.widget.AppCompatButton>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/accept_button"
+        ></View>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
